# planetary_motion

./: .gitignore
C/: CMakeLists.txt  README.md
C/celestial_system/: CMakeLists.txt  celestial_system.c  celestial_system.h
C/simulation/: CMakeLists.txt  plotting.py  simulation.c
C/tests/: CMakeLists.txt
C/tests/ce_system_tests/: CMakeLists.txt  kinematics_test.c  population_test.c
C/tests/vector_tests/: CMakeLists.txt  vector_add_test.c  vector_mag_test.c  vector_sub_test.c
C/vector/: CMakeLists.txt  vector.c  vector.h
